--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -39,32 +39,36 @@
         <!-- Sección de Pizzas Especiales y Personaliza tu Pizza (derecha) -->
         <div class="right-side">
             <div class="pizza-specials-section">
-                <h3>PIZZAS ESPECIALES</h3>
-                <ul class="no-bullets">
-                    <li>Jamón Y Morrón</li>
-                    <li>Cheddar y Bacon</li>
-                    <li>Napolitana Jamón</li>
-                    <li>Calabresa</li>
-                    <li>Fugazzeta</li>
-                    <li>Jamón con Morrón y Huevo</li>
-                    <li>Fugazzetta con Jamón</li>
-                    <li>Napolitana con Jamón</li>
-                </ul>
+                <div class="orange-box">
+                    <h3>PIZZAS ESPECIALES</h3>
+                    <ul class="no-bullets">
+                        <li>Jamón Y Morrón</li>
+                        <li>Cheddar y Bacon</li>
+                        <li>Napolitana Jamón</li>
+                        <li>Calabresa</li>
+                        <li>Fugazzeta</li>
+                        <li>Jamón con Morrón y Huevo</li>
+                        <li>Fugazzetta con Jamón</li>
+                        <li>Napolitana con Jamón</li>
+                    </ul>
+                </div>
             </div>
 
             <div class="pizza-customize-section">
-                <h3>AGREGA TUS INGREDIENTES EXTRAS</h3>
-                <ul class="no-bullets">
-                    <li>Huevo</li>
-                    <li>Tomate</li>
-                    <li>Morron</li>
-                    <li>Aceitunas</li>
-                    <li>Extra queso</li>
-                    <li>Jamon</li>
-                    <li>Longaniza</li>
-                    <li>Cheddar</li>
-                    <li>Bacon</li>
-                </ul>
+                <div class="orange-box">
+                    <h3>AGREGA TUS INGREDIENTES EXTRAS</h3>
+                    <ul class="no-bullets">
+                        <li>Huevo</li>
+                        <li>Tomate</li>
+                        <li>Morron</li>
+                        <li>Aceitunas</li>
+                        <li>Extra queso</li>
+                        <li>Jamon</li>
+                        <li>Longaniza</li>
+                        <li>Cheddar</li>
+                        <li>Bacon</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
