--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -13,13 +13,32 @@
             padding: 10px 0;
             font-size: 2em;
             font-weight: bold;
-            color: black;
+            color: #333;
             width: 100%; /* Hace que la franja ocupe todo el ancho */
             box-sizing: border-box; /* Asegura que el padding no cause desbordamiento */
+            margin-top: 20px; /* Espacio entre los botones y la franja */
+        }
+
+        /* Estilo para los botones */
+        .home-button, .promo-button {
+            font-size: 1.2em; /* Aumentar tamaño de la letra */
+            color: white; /* Letra blanca */
+            background-color: #333; /* Color de fondo de los botones */
+            border: none;
+            padding: 10px 20px;
+            margin: 5px;
+            cursor: pointer;
+        }
+
+        /* Ajuste de tamaño de la imagen de la pizza */
+        .masa-option img {
+            width: 356px; /* Ancho de la imagen */
+            height: 232px; /* Alto de la imagen */
+            object-fit: cover; /* Asegura que la imagen se ajuste sin distorsionarse */
         }
     </style>
 </head>
-<body>c
+<body>
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Big Pizza Logo" class="logo">
