--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -23,7 +23,7 @@
         .home-button, .promo-button {
             font-size: 1.2em; /* Aumentar tamaño de la letra */
             color: white; /* Letra blanca */
-            background-color: #333; /* Color de fondo de los botones */
+            background-color: #f39c12; /* Color de fondo de los botones */
             border: none;
             padding: 10px 20px;
             margin: 5px;
@@ -45,7 +45,7 @@
         </div>
         
         <div class="buttons-container">
-            <button class="home-button" onclick="window.location.href='index.html'">Inicio</button>
+            <button class="home-button" onclick="window.location.href='index.html'">INICIO</button>
             <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">PROMOCIONES</button>
         </div>
 
@@ -56,7 +56,7 @@
     <!-- Sección de Pizzas -->
     <div class="menu-section">
         <div class="pizza-section">
-            <h2>ELIGE COMO QUIERES LA MASA</h2>
+            <h2 style="color: orange; text-align: center;">ELIGE COMO QUIERES LA MASA</h2>
             <div class="masa">
                 <div class="masa-option">
                     <img src="images/piedra.jpg" alt="Masa a la Piedra">
@@ -87,7 +87,7 @@
 
             <div class="pizza-customize-section">
                 <div class="orange-box">
-                    <h3>AGREGA TUS INGREDIENTES EXTRAS</h3>
+                    <h3>ADICIONA TUS INGREDIENTES EXTRAS FAVORITOS</h3>
                     <ul class="no-bullets">
                         <li>Huevo</li>
                         <li>Tomate</li>
