--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -71,8 +71,8 @@
         <div class="right-side">
             <div class="pizza-specials-section">
                 <div class="orange-box">
-                    <h3>PIZZAS ESPECIALES</h3>
-                    <ul class="no-bullets">
+                    <h2>PIZZAS ESPECIALES</h2>
+                    <ul class="no-bullets" style="font-size: 25px;">
                         <li>Jamón Y Morrón</li>
                         <li>Cheddar y Bacon</li>
                         <li>Napolitana Jamón</li>
@@ -87,8 +87,8 @@
 
             <div class="pizza-customize-section">
                 <div class="orange-box">
-                    <h3>ADICIONA TUS INGREDIENTES EXTRAS FAVORITOS</h3>
-                    <ul class="no-bullets">
+                    <h2>ADICIONA TUS INGREDIENTES EXTRAS FAVORITOS</h2>
+                    <ul class="no-bullets" style="font-size: 25px;">
                         <li>Huevo</li>
                         <li>Tomate</li>
                         <li>Morron</li>
