--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -71,8 +71,10 @@
         <div class="right-side">
             <div class="pizza-specials-section">
                 <div class="orange-box">
-                    <h2>PIZZAS ESPECIALES</h2>
+                    <h2>PIZZAS ESPECIALES (Grandes o Individuales)</h2>
                     <ul class="no-bullets" style="font-size: 25px;">
+                        <li>Muzzarella</li>
+                        <li>Fugazzeta</li>
                         <li>Jamón Y Morrón</li>
                         <li>Cheddar y Bacon</li>
                         <li>Napolitana con Jamón (tomate y ajo)</li>
