--- a/menu-ingles.html
+++ b/menu-ingles.html
@@ -79,7 +79,6 @@
                         <li>Cheddar and Bacon</li>
                         <li>Napolitana with Ham (tomato and garlic)</li>
                         <li>Peperoni</li>
-                        <li>Onion</li>
                         <li>Ham with Bell Pepper and Egg</li>
                         <li>Onion with Ham</li>
                         <li>Ham with Bell Pepper</li>
@@ -146,7 +145,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Madeirense Services | All rights reserved</p>
+        <p>&copy; 2024 Servicios Madeirense | All rights reserved</p>
     </footer>
 </body>
 </html>
